--- a/style/style.css
+++ b/style/style.css
@@ -266,7 +266,7 @@ body .section-hero {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  background-image: url("/images/6.jpg");
+  background-image: url("./images/6.jpg");
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   background-size: cover;
@@ -274,7 +274,7 @@ body .section-hero {
 
 @media only screen and (max-width: 50em) {
   body .section-hero {
-    background-image: url("/images/6.jpg");
+    background-image: url("./images/6.jpg");
     background-position: bottom, center;
     background-size: cover;
     background-repeat: no-repeat;
